INSTRUCTION.COVEREDRATIO=0.35 to 0.40 BRANCH.COVEREDRATIO=0.25 to 0.35